--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -79,7 +79,8 @@ LME <- readOGR("data/arctic_regions/LME/LME_2013_polygon.shp",
                verbose = F) %>% 
   spTransform(CRSobj = crs(arctic_laea)) %>% # Project shapefile in laea
   fortify() %>% # Convert to dataframe for ggplot
-  rename(xc = long, yc = lat)
+  rename(xc = long, yc = lat) %>%
+  mutate(LME_study = if_else(id %in% c("4", "11", "14", "15", "16"), "a", "b"))
 
 # Sutton 2017 Mesopelagic ecoregions
 Sutton2017 <- st_read("data/arctic_regions/Sutton 2017/mmc.shp") %>%
@@ -478,7 +479,6 @@ lon90e <- data.frame(lon = rep(-90, 1000)) %>%
          yc = st_coordinates(.)[,2]) %>%
   st_drop_geometry()
 
-
 map_laea <- bathy_laea %>%
   ggplot(aes(x = xc, y = yc)) +
   # Plot bathy
@@ -486,10 +486,12 @@ map_laea <- bathy_laea %>%
   scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
   # guides(fill = "none") + 
   new_scale_fill() +
+  # Plot 200 m isobath
+  geom_contour(aes(z = depth), breaks = -200, col = "black", lwd = 0.1, alpha = 0.8) +
   # LME
-  geom_polygon(data = LME, aes(x = xc, y = yc, group = group),
-               col = "black", fill = NA, alpha = 0.2, 
-               lwd = 0.35, lty = 1) +
+  geom_polygon(data = subset(LME, LME_study == "a"), 
+               aes(x = xc, y = yc, group = group, col = LME_study), 
+               col = "#C12126", fill = NA, lwd = 0.35, lty = 1) +
   # Plot coastlines
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
                fill = "grey30") +
@@ -529,9 +531,9 @@ map_laea_lon <- bathy_laea %>%
   # guides(fill = "none") + 
   new_scale_fill() +
   # LME
-  geom_polygon(data = LME, aes(x = xc, y = yc, group = group),
-               col = "black", fill = NA, alpha = 0.2, 
-               lwd = 0.5, lty = 1) +
+  geom_polygon(data = subset(LME, LME_study == "a"), 
+               aes(x = xc, y = yc, group = group, col = LME_study), 
+               col = "#C12126", fill = NA, lwd = 0.35, lty = 1) +
   # Plot coastlines
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
                fill = "grey30") +
