--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -214,7 +214,7 @@ stat_laea %>%
         axis.title = element_blank())
 ```
 
-```{r map-velocity318, fig.height=3.5, fig.width=6}
+```{r map-velocity380, fig.height=3.5, fig.width=6}
 # Velocity
 phy_grid_laea %>% 
   filter(depth == 380) %>%
@@ -224,7 +224,7 @@ phy_grid_laea %>%
                fill = "grey80") +
   scale_fill_cmocean("velo (cm/s)", name = "speed", limits = c(0, 8)) +
   facet_wrap(~ year, ncol = 3) +
-  ggtitle("Velocity at 318 m depth") +
+  ggtitle("Velocity at 380 m depth") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
   theme(legend.position = "top",
         axis.text = element_blank(),
@@ -502,7 +502,7 @@ save(SA_BB, LM_BB_all, LM_BB_myctoT, LM_BB_myctoF,
 
 ## Data preparation
 
-I select data at 318 m depth because it fits well with the DSL diurnal centre of mass. It also prevent from removing too much data like the deeper depth levels would do.
+I select data at 380 m depth because it fits well with the DSL diurnal centre of mass. It also prevent from removing too much data like the deeper depth levels would do.
 
 ```{r GAM-prep}
 SA_df <- stat_laea %>%
@@ -747,7 +747,7 @@ No terms can be dropped, so I refit model with REML.
 GAM_I2 <- gam(NASC_int ~ 
                  s(year, bs = "re") +
                  s(LME, bs = "re") +
-                 s(v, by = LME, k = 5, bs = "tp"),
+                 s(v, by = LME, k =5, bs = "tp"),
               data = SA_df, family = Gamma(link = "log"), method = "REML")
 summary(GAM_I2)
 ```
@@ -774,6 +774,7 @@ plot_grid(GAM_I2_resid %>%
             labs(x = "year") +
             geom_boxplot(fill = NA),
           nrow = 1)
+k.check(GAM_I2)
 ```
 
 ## Model predictions
@@ -885,7 +886,7 @@ GAMS_velo <- pred_S %>%
   coord_cartesian(ylim = c(-2, 40), expand = T) +
   scale_x_continuous(breaks = seq(0, 10, 1)) +
   labs(title = "NASC Model S",
-       x = expression("Current velocity at 318 m (cm s"^-1*")"),
+       x = expression("Current velocity at 380 m (cm s"^-1*")"),
        y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
   theme(panel.border = element_blank(),
         axis.line = element_line(),
@@ -902,7 +903,7 @@ GAMI_velo <- pred_I %>%
   coord_cartesian(ylim = c(-2, 40), expand = T) +
   scale_x_continuous(breaks = seq(0, 10, 1)) +
   labs(title = "NASC Model I",
-       x = expression("Current velocity at 318 m (cm s"^-1*")"),
+       x = expression("Current velocity at 380 m (cm s"^-1*")"),
        y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
   theme(panel.border = element_blank(),
         axis.line = element_line(),
@@ -919,7 +920,7 @@ rm(GAMS_velo, GAMI_velo)
 
 ## Data preparation
 
-I select data at 318 m depth because it fits well with the DSL diurnal centre of mass. It also prevent from removing too much data like the deeper depth levels would do.
+I select data at 380 m depth because it fits well with the DSL diurnal centre of mass. It also prevent from removing too much data like the deeper depth levels would do.
 
 ```{r GAMSA-prep}
 SA_df <- stat_laea %>%
@@ -1238,7 +1239,7 @@ Refit model with REML
 GAMSA_I3 <- gam(SA_int ~
                   s(year, bs = "re") +
                   s(LME, bs = "re") +
-                  s(v, by = LME, k = 5, bs = "tp"),
+                  s(v, by = LME, k = 6, bs = "tp"),
                 data = SA_df, family = "gaussian", method = "REML")
 summary(GAMSA_I3)
 ```
@@ -1265,6 +1266,7 @@ plot_grid(GAMSA_I3_resid %>%
             labs(x = "year") +
             geom_boxplot(fill = NA), 
           nrow = 1)
+k.check(GAMSA_I3)
 ```
 
 ## Model predictions
@@ -1371,7 +1373,7 @@ GAMSAS_velo <- predSA_S %>%
   coord_cartesian(ylim = c(-2, 30), expand = T) +
   scale_x_continuous(breaks = seq(0, 10, 1)) +
   labs(title = "SA Model S",
-       x = expression("Current velocity at 318 m (cm s"^-1*")"),
+       x = expression("Current velocity at 380 m (cm s"^-1*")"),
        y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
   theme(panel.border = element_blank(),
         axis.line = element_line(),
@@ -1388,7 +1390,7 @@ GAMSAI_velo <- predSA_I %>%
   coord_cartesian(ylim = c(-2, 30), expand = T) +
   scale_x_continuous(breaks = seq(0, 10, 1)) +
   labs(title = "SA Model I",
-       x = expression("Current velocity at 318 m (cm s"^-1*")"),
+       x = expression("Current velocity at 380 m (cm s"^-1*")"),
        y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
   theme(panel.border = element_blank(),
         axis.line = element_line(),
